--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
             <div class="personal__logo">Jason Miranda</div>
             <ul class="nav__link--list">
                 <li>
-                    <a href="" class="nav__link--anchor"></a>
+                    <a href="" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Languages</a>
+                </li>
+                <li>
+                    <a href="" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Project</a>
+                </li>
+                <li>
+                    <a href="" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Contact</a>
                 </li>
             </ul>
         </nav>
