--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                 </li>
             </ul>
         </nav>
+        <div>
+            <div class="about-me__info row">
+                <div class="about-me__info--container">
+                    <figure class="about-me__picture--mask">
+                        <img src="./assets/me.jpeg" alt="Picture of Me!">
+                    </figure>
+                    <h1>
+                        Hey! I'm Jason Miranda
+                    </h1>
+                </div>
+            </div>
+        </div>
     </Section>
 </body>
 </html>
