--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Jason Miranda</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <Section id="about-me">
         <nav>
@@ -38,14 +40,17 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/me.jpeg" alt="Picture of Me!">
+                        <img src="" alt="Picture of Me!">
                     </figure>
-                    <h1>
-                        Hey! I'm Jason Miranda
+                    <h1 class="about-me__info--title">
+                        Hey! I'm <span class="text--seagreen">Jason Miranda</span>
+                        I am a Frontend Software Engineer with a strong passion for building responsive and performant
+                        web applications with great user experience that positively impacts the world
                     </h1>
                 </div>
             </div>
         </div>
     </Section>
 </body>
+
 </html>
