--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
                     <figure class="about-me__picture--mask">
                         <img src="" alt="Picture of Me!">
                     </figure>
-                    <h1 class="about-me__info--title">
-                        Hey! I'm <span class="text--seagreen">Jason Miranda</span>
-                        I am a Frontend Software Engineer with a strong passion for building responsive and performant
-                        web applications with great user experience that positively impacts the world
-                    </h1>
+                        <h1 class="about-me__info--title">
+                            Hey! I'm <span class="text--seagreen">Jason Miranda</span>
+                        </h1>
+                        <p class="about-me__info--para">
+                            I am a <strong class="text--seagreen">Frontend Software Engineer</strong> with a strong passion for building responsive and performant
+                            web applications with great user experience that positively impacts the world
+                        </p>
                 </div>
             </div>
         </div>
