--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </li>
             </ul>
         </nav>
-        <div>
+        <div class="flex flex-1">
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="" alt="Picture of Me!">
+                        <img src="./assets/me1.jpeg" alt="Picture of Me!">
                     </figure>
                         <h1 class="about-me__info--title">
                             Hey! I'm <span class="text--seagreen">Jason Miranda</span>
