--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason Miranda</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https//kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/me1.jpeg" alt="Picture of Me!">
+                        <img src="./assets/me1.jpeg" class="about-me__picture" alt="Picture of Me!">
                     </figure>
                         <h1 class="about-me__info--title">
                             Hey! I'm <span class="text--seagreen">Jason Miranda</span>
@@ -48,7 +49,12 @@
                         <p class="about-me__info--para">
                             I am a <strong class="text--seagreen">Frontend Software Engineer</strong> with a strong passion for building responsive and performant
                             web applications with great user experience that positively impacts the world
-                        </p>
+                        </p >
+                        <div class="about-me__links">
+                            <a href="" class="about-me__link">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                        </div>
                 </div>
             </div>
         </div>
