--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jason Miranda</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="https//kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1398b016f2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
