--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
                             <a href="" class="about-me__link">
                                 <i class="fa-brands fa-linkedin"></i>
                             </a>
+                            <a href="" class="about-me__link">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="" class="about-me__link">
+                                <i class="fa-solid fa-envelope"></i>
+                            </a>
+                            <a href="" class="about-me__link">
+                                <i class="fa-solid fa-file-pdf"></i>
+                            </a>
                         </div>
                 </div>
             </div>
