added undrawn websites

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                             </a>
                         </div>
                 </div>
+                <figure class="about-me__img--container">
+                    <img src="./assets/undraw_websites.svg" alt="">
+                </figure>
             </div>
         </div>
     </Section>
