--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
                         </div>
                 </div>
                 <figure class="about-me__img--container">
-                    <img src="./assets/undraw_websites.svg" alt="">
+                    <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
                 </figure>
             </div>
         </div>
     </Section>
+    <section id="languages">
+        
+    </section>
 </body>
 
 </html>
