--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
         </div>
     </Section>
     <section id="languages">
-        
+        <div class="containier">
+            <div class="row">
+                <h1 class="section__title">This is my technology stack</h1>
+                <div class="language__list">
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
