--- a/index.html
+++ b/index.html
@@ -43,27 +43,28 @@
                     <figure class="about-me__picture--mask">
                         <img src="./assets/me1.jpeg" class="about-me__picture" alt="Picture of Me!">
                     </figure>
-                        <h1 class="about-me__info--title">
-                            Hey! I'm <span class="text--seagreen">Jason Miranda</span>
-                        </h1>
-                        <p class="about-me__info--para">
-                            I am a <strong class="text--seagreen">Frontend Software Engineer</strong> with a strong passion for building responsive and performant
-                            web applications with great user experience that positively impacts the world
-                        </p >
-                        <div class="about-me__links">
-                            <a href="" class="about-me__link">
-                                <i class="fa-brands fa-linkedin"></i>
-                            </a>
-                            <a href="" class="about-me__link">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                            <a href="" class="about-me__link">
-                                <i class="fa-solid fa-envelope"></i>
-                            </a>
-                            <a href="" class="about-me__link">
-                                <i class="fa-solid fa-file-pdf"></i>
-                            </a>
-                        </div>
+                    <h1 class="about-me__info--title">
+                        Hey! I'm <span class="text--seagreen">Jason Miranda</span>
+                    </h1>
+                    <p class="about-me__info--para">
+                        I am a <strong class="text--seagreen">Frontend Software Engineer</strong> with a strong passion
+                        for building responsive and performant
+                        web applications with great user experience that positively impacts the world
+                    </p>
+                    <div class="about-me__links">
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                        <a href="" class="about-me__link">
+                            <i class="fa-solid fa-file-pdf"></i>
+                        </a>
+                    </div>
                 </div>
                 <figure class="about-me__img--container">
                     <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
@@ -78,7 +79,8 @@
                 <div class="language__list">
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="" alt="" class="language__img">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
                         </figure>
                     </div>
                 </div>
