added 3 more language icons

--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
                                 alt="" class="language__img">
                         </figure>
                     </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                    </div>
+                    <div class="language">
+                        <figure class="language__img--wrapper">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                                alt="" class="language__img">
+                        </figure>
+                    </div>
                 </div>
             </div>
         </div>
