--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="languages">
         <div class="containier">
             <div class="row">
-                <h1 class="section__title">This is my technology stack</h1>
+                <h1 class="section__title">This is my <span class="text--seagreen">technology stack</span></h1>
                 <div class="language__list">
                     <div class="language">
                         <figure class="language__img--wrapper">
