--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
             </div>
         </div>
     </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">Here are some of my <span class="text--seagreen">projects!</span></h1>
+                <ul class="project__list"></ul>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
