--- a/index.html
+++ b/index.html
@@ -141,7 +141,13 @@
         <div class="container">
             <div class="row">
                 <h1 class="section__title">Here are some of my <span class="text--seagreen">projects!</span></h1>
-                <ul class="project__list"></ul>
+                <ul class="project__list">
+                    <li class="projects">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="Car subsciption project">
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
