--- a/index.html
+++ b/index.html
@@ -145,6 +145,22 @@
                     <li class="projects">
                         <div class="project__wrapper">
                             <img src="./assets/loopit.png" class="project__img" alt="Car subsciption project">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Car sales project</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, Javascript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quo voluptas quod
+                                    modi recusandae incidunt facilis quidem ipsa, ut distinctio minima nemo laboriosam
+                                    numquam deserunt necessitatibus excepturi illum! Esse, corrupti!
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="www.github.com/suppleye" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </li>
                 </ul>
