added css to project description

--- a/index.html
+++ b/index.html
@@ -156,8 +156,11 @@
                                     numquam deserunt necessitatibus excepturi illum! Esse, corrupti!
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="www.github.com/suppleye" class="project__description--link">
+                                    <a href="www.github.com/suppleye" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="www.yourwesbsite.com" class="project__description--link">
+                                        <i class="fab fa-link"></i>
                                     </a>
                                 </div>
                             </div>
