--- a/index.html
+++ b/index.html
@@ -156,10 +156,34 @@
                                     numquam deserunt necessitatibus excepturi illum! Esse, corrupti!
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="www.github.com/suppleye" target="_blank" class="project__description--link">
+                                    <a href="https://www.github.com/suppleye" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="www.yourwesbsite.com" class="project__description--link">
+                                    <a href="https://www.yourwesbsite.com" class="project__description--link">
+                                        <i class="fab fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="projects">
+                        <div class="project__wrapper">
+                            <img src="./assets/loopit.png" class="project__img" alt="Car subsciption project">
+                            <div class="project__description">
+                                <h3 class="project__description--title">Dashboard</h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, Javascript, Vue, Vuex
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quo voluptas quod
+                                    modi recusandae incidunt facilis quidem ipsa, ut distinctio minima nemo laboriosam
+                                    numquam deserunt necessitatibus excepturi illum! Esse, corrupti!
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://www.github.com/suppleye" target="_blank" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="https://www.yourwesbsite.com" class="project__description--link">
                                         <i class="fab fa-link"></i>
                                     </a>
                                 </div>
@@ -180,34 +204,10 @@
                                     numquam deserunt necessitatibus excepturi illum! Esse, corrupti!
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="www.github.com/suppleye" target="_blank" class="project__description--link">
+                                    <a href="https://www.github.com/suppleye" target="_blank" class="project__description--link">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="www.yourwesbsite.com" class="project__description--link">
-                                        <i class="fab fa-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="projects">
-                        <div class="project__wrapper">
-                            <img src="./assets/loopit.png" class="project__img" alt="Car subsciption project">
-                            <div class="project__description">
-                                <h3 class="project__description--title">Car sales project</h3>
-                                <h4 class="project__description--sub-title">
-                                    Html, CSS, Javascript, Vue, Vuex
-                                </h4>
-                                <p class="project__description--para">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti quo voluptas quod
-                                    modi recusandae incidunt facilis quidem ipsa, ut distinctio minima nemo laboriosam
-                                    numquam deserunt necessitatibus excepturi illum! Esse, corrupti!
-                                </p>
-                                <div class="project__description--links">
-                                    <a href="www.github.com/suppleye" target="_blank" class="project__description--link">
-                                        <i class="fab fa-github"></i>
-                                    </a>
-                                    <a href="www.yourwesbsite.com" class="project__description--link">
+                                    <a href="https://www.yourwesbsite.com" class="project__description--link">
                                         <i class="fab fa-link"></i>
                                     </a>
                                 </div>
@@ -218,6 +218,32 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="row footer__row">
+            <a href="#">
+                <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+            </a>
+            <div class="footer__social--list">
+                <a href="https://www.google.com" class="
+                footer__social--link
+                link__hover-effect--white
+                " target="_blank">GitHub</a>
+                <a href="https://www.google.com" class="
+                footer__social--link
+                link__hover-effect--white
+                " target="_blank">LinkedIn</a>
+                <a href="mailto:email@email.com" class="
+                footer__social--link
+                link__hover-effect--white
+                " target="_blank">Email</a>
+                <a href="./assets/Example Resume.pdf" class="
+                footer__social--link
+                link__hover-effect--white
+                " target="_blank">Resume</a>
+            </div>
+        </div>
+    </footer>
+    <div class="footer__copyright">Copyright  2022 Jason Miranda</div>
 </body>
 
 </html>
