--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
                 link__hover-effect--white
                 " target="_blank">Resume</a>
             </div>
+            <div class="footer__copyright">Copyright © 2022 Jason Miranda</div>
         </div>
     </footer>
-    <div class="footer__copyright">Copyright  2022 Jason Miranda</div>
 </body>
 
 </html>
