added margin to footer logo

--- a/index.html
+++ b/index.html
@@ -221,7 +221,9 @@
     <footer>
         <div class="row footer__row">
             <a href="#">
-                <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+                <figure class="footer__logo">
+                    <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+                </figure>
             </a>
             <div class="footer__social--list">
                 <a href="https://www.google.com" class="
