--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
         <nav>
             <div class="personal__logo">Jason Miranda</div>
             <ul class="nav__link--list">
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="#Languages" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Languages</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Project</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="" class="
                     nav__link--anchor
                     nav__link--anchor-primary
