--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <a href="https://www.yourwesbsite.com" class="project__description--link">
-                                        <i class="fab fa-link"></i>
+                                        <i class="fas fa-link"></i>
                                     </a>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <a href="https://www.yourwesbsite.com" class="project__description--link">
-                                        <i class="fab fa-link"></i>
+                                        <i class="fas fa-link"></i>
                                     </a>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                                         <i class="fab fa-github"></i>
                                     </a>
                                     <a href="https://www.yourwesbsite.com" class="project__description--link">
-                                        <i class="fab fa-link"></i>
+                                        <i class="fas fa-link"></i>
                                     </a>
                                 </div>
                             </div>
