--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="" class="about-me__link">
                             <i class="fa-solid fa-envelope"></i>
                         </a>
-                        <a href="" class="about-me__link">
+                        <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
                             <i class="fa-solid fa-file-pdf"></i>
                         </a>
                     </div>
